--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,45 +6,47 @@
   },
   "type": "module",
   "dependencies": {
-    "@inquirer/prompts": "^3.1.1",
+    "@clack/prompts": "^0.7.0",
+    "chalk": "^5.3.0",
     "commander": "^11.0.0",
     "execa": "^8.0.1",
     "fs-extra": "^11.1.1",
+    "ora": "^7.0.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/fs-extra": "^11.0.2",
-    "@types/node": "^20.6.0",
-    "type-fest": "^4.3.1",
-    "typescript": "^5.2.2",
     "@auth/core": "^0.12.0",
     "@auth/drizzle-adapter": "^0.3.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tanstack/react-query": "^4.33.0",
+    "@total-typescript/ts-reset": "^0.5.1",
     "@trpc/client": "^10.38.0",
     "@trpc/next": "10.38.0",
     "@trpc/react-query": "^10.38.0",
     "@trpc/server": "^10.38.0",
+    "@types/eslint": "^8.44.2",
+    "@types/fs-extra": "^11.0.2",
+    "@types/node": "^20.6.0",
+    "@types/pg": "^8.10.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "drizzle-kit": "^0.19.13",
+    "drizzle-orm": "^0.28.5",
+    "eslint-config-custom": "workspace:*",
     "lucide-react": "^0.269.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "postgres": "^3.3.5",
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
-    "@total-typescript/ts-reset": "^0.5.1",
-    "@types/eslint": "^8.44.2",
-    "@types/pg": "^8.10.2",
-    "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.19.13",
-    "drizzle-orm": "^0.28.5",
-    "prettier": "^3.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.3",
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*"
+    "tsconfig": "workspace:*",
+    "type-fest": "^4.3.1",
+    "typescript": "^5.2.2"
   }
 }
