--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -44,6 +44,7 @@
     "prettier-plugin-tailwindcss": "^0.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sort-package-json": "^2.5.1",
     "superjson": "^1.13.1",
     "tsconfig": "workspace:*",
     "type-fest": "^4.3.1",
