--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,10 +1,29 @@
 {
-  "name": "cli",
+  "name": "kickstart",
   "version": "0.0.0",
-  "scripts": {
-    "dev": "tsc -w"
-  },
   "type": "module",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "author": {
+    "name": "miljan",
+    "url": "https://github.com/miljan-code"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/miljan-code/next-kickstart",
+    "directory": "packages/cli"
+  },
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "dev": "tsc -w",
+    "publish": "tsc --build && pnpm publish --access public"
+  },
+  "exports": "./dist/index.js",
+  "bin": "./dist/index.js",
   "dependencies": {
     "@clack/prompts": "^0.7.0",
     "chalk": "^5.3.0",
