--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-kickstart",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "license": "MIT",
   "publishConfig": {
@@ -31,7 +31,8 @@
     "execa": "^8.0.1",
     "fs-extra": "^11.1.1",
     "ora": "^7.0.1",
-    "zod": "^3.22.2"
+    "zod": "^3.22.2",
+    "sort-package-json": "^2.5.1"
   },
   "devDependencies": {
     "@auth/core": "^0.12.0",
@@ -62,7 +63,6 @@
     "prettier-plugin-tailwindcss": "^0.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sort-package-json": "^2.5.1",
     "superjson": "^1.13.1",
     "type-fest": "^4.3.1",
     "typescript": "^5.2.2"
