--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-kickstart",
+  "name": "create-next-kickstart",
   "version": "0.0.2",
   "type": "module",
   "license": "MIT",
@@ -17,7 +17,8 @@
   },
   "files": [
     "dist",
-    "template"
+    "template",
+    "packages.json"
   ],
   "scripts": {
     "dev": "tsc -w",
