--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,9 +32,10 @@
     "commander": "^11.0.0",
     "execa": "^8.0.1",
     "fs-extra": "^11.1.1",
+    "gradient-string": "^2.0.2",
     "ora": "^7.0.1",
-    "zod": "^3.22.2",
-    "sort-package-json": "^2.5.1"
+    "sort-package-json": "^2.5.1",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@auth/core": "^0.12.0",
@@ -49,6 +50,7 @@
     "@trpc/server": "^10.38.0",
     "@types/eslint": "^8.44.2",
     "@types/fs-extra": "^11.0.2",
+    "@types/gradient-string": "^1.1.3",
     "@types/node": "^20.6.0",
     "@types/pg": "^8.10.2",
     "class-variance-authority": "^0.7.0",
