--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,7 +18,8 @@
   "files": [
     "dist",
     "template",
-    "packages.json"
+    "packages.json",
+    "README.md"
   ],
   "scripts": {
     "dev": "tsc -w",
