feat: added tsup

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,8 +22,10 @@
     "README.md"
   ],
   "scripts": {
-    "dev": "tsc -w",
-    "publish": "tsc --build && pnpm publish --access public"
+    "typecheck": "tsc",
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "pub:release": "pnpm build && pnpm publish --access public"
   },
   "exports": "./dist/index.js",
   "bin": "./dist/index.js",
@@ -69,6 +71,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
+    "tsup": "^7.2.0",
     "type-fest": "^4.3.1",
     "typescript": "^5.2.2"
   }
