--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "start:cli": "node packages/cli/dist/index.js init test-proj"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
