fix: minor tweaks

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "start:cli": "node packages/cli/dist/index.js"
+    "start:cli": "node packages/cli/dist/index.js",
+    "release": "changeset version",
+    "ci": "pnpm --filter next-kickstart ci"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
