--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "start:cli": "node packages/cli/dist/index.js",
-    "release": "changeset version",
-    "ci": "pnpm --filter next-kickstart ci"
+    "ci": "pnpm --filter next-kickstart ci",
+    "release": "pnpm ci && changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
