--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "next-kickstart",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -15,6 +16,5 @@
     "prettier": "^3.0.3",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@8.6.10",
-  "name": "next-kickstart"
+  "packageManager": "pnpm@8.6.10"
 }
