--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,12 +6,14 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "add:ui": "pnpm dlx shadcn-ui@latest add"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.6.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
