--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^20.5.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@vercel/style-guide": "^5.0.1",
     "react": "^18.2.0",
     "typescript": "^4.5.2"
   }
