docs: index page

--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -14,7 +14,8 @@
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.3"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
